kubernetes/gke/apps/demo/nginx-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    name: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
spec:
  clusterIP: None
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx.ninebasetwo.xyz
      secretName: aciacfia-tls
  rules:
    - host: nginx.ninebasetwo.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80

# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: nginx-http-route
#   namespace: nginx
# spec:
#   parentRefs:
#   - name: gateway-gke-l7-rilb
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: "/"
#     backendRefs:
#     - name: nginx
#       port: 80
